<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/itemIcon"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="125dp"
        android:src="@drawable/splash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="100dp"
        android:src="@drawable/new_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:text="Email"
        android:textColor="#272727"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="-20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="-10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Email"
        app:layout_constraintStart_toEndOf="@+id/textView_Email" />


    <TextView
        android:id="@+id/textView_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Password"
        android:textColor="#272727"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/textView_Email" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_Password"
        android:layout_marginBottom="-10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Password"
        app:layout_constraintStart_toStartOf="@+id/editText_Email" />

    <Button
        android:id="@+id/button_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Login"
        android:textSize="20sp"
        android:background="@drawable/buttonstyle"
        android:typeface="monospace"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password" />


    <TextView
        android:id="@+id/textView_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="SignUp here"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/userIcon"
        app:layout_constraintStart_toEndOf="@+id/userIcon" />

</android.support.constraint.ConstraintLayout>