<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="370dp"
    android:layout_height="270dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5sp"
    android:background="@drawable/background">


<TextView
    android:id="@+id/txt_Close"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="end"
    android:background="@drawable/closecircle"
    android:gravity="center"
    android:text="@string/Close"
    android:textSize="20sp"
    android:textColor="@color/nav_colors"
    android:textStyle="bold" />

<Spinner
    android:id="@+id/spinner_Category"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/txt_Close"
    android:layout_marginStart="115dp"
    android:prompt="@string/spinner_title"
    android:gravity="center"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="115dp" />


    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_Category"
        app:errorEnabled="true"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:textColor="@color/colorAccentDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_AddExpense"
        android:layout_alignParentEnd="true"
        app:errorEnabled="true"
        android:layout_alignParentRight="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="Date"
            android:inputType="date"
            android:textColor="@color/colorAccentDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_AddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        android:onClick="addExpense"
        android:text="ADD"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace" />


</RelativeLayout>
