...

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Expenses"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textSize="20sp"
        android:textStyle="bold" />


...
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--TODO:Floating button created for user to add expenses manually -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_Addexpens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorAccentDark"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
...
